# brainchild

./: .gitignore  LICENSE  PLAN.md  README.md  install.ps1  install.sh  pyproject.toml
brainchild/: __main__.py  claude_runner.py  cli.py  config.py  daemon.py  scheduler.py  security.py  synthesis.py  tg.py  vault.py  voice.py
brainchild/install/: __init__.py  bot_setup.py  service_register.py  wizard.py
brainchild/prompts/: __init__.py  file_digest.txt  vault_architect.txt
