[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brainchild"
version = "0.1.5"
description = "A personal-agent daemon. One Python process, one Telegram bot, one Claude subscription, zero servers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Brainchild contributors" }]
dependencies = [
  "keyring>=24",
  "imageio-ffmpeg>=0.4.9",
  "pypdf>=4.0",
  "python-docx>=1.1",
]

[project.optional-dependencies]
voice = ["pywhispercpp>=1.2.0; sys_platform != 'win32'"]

[project.scripts]
brainchild = "brainchild.cli:main"

[tool.setuptools]
packages = ["brainchild", "brainchild.install", "brainchild.prompts"]
include-package-data = true

[tool.setuptools.package-data]
"brainchild.prompts" = ["*.txt", "*.md"]
